Changes from jTDS 0.8.1
=========================

08/04/2004 - Brian Heineman
 o Applied patch in bug [1003507] Cursor result set close error;
   (thanks to Mike Hutchinson for report and the fix).

08/04/2004 - David Kilzer
 o Renamed Settings class to DefaultProperties to match its use.  Removed
   redundant "DEFAULT_" prefix from its public static constants.

08/03/2004 - Brian Heineman
 o Applied patch in bug [1002811] Poor performance of cursor result sets;
   (thanks to Mike Hutchinson for the fix).
 o Applied patch in bug  [1001956] updateBytes() converted to hex string in
   varchar; (thanks to Mike Hutchinson for the fix).

08/03/2004 - David Kilzer
 o Swapped descriptions of appName and progName in FAQ.
 o Renamed internal libName variable to progName to match external property.
 o Cleaned up Messages.properties to remove prop.libname (prop.progname already
   existed) and to add prop.desc.appname and prop.desc.progname properties.
 o Clean up comments to reference Driver.SQLSERVER and Driver.SYBASE instead of
   TdsCore or old Tds classes.
 o Add code to check for inherited methods, not just locally declared methods,
   in UnitTestBase static methods.
 o Fixed Driver.getPropertyInfo() to parse url when null properties are used.
 o Created new Settings class to hold default settings values and related
   utility methods.
 o Moved port and LOB buffer constants from TdsCore to Settings.
 o Modified Driver.parseURL() to set default properties using
   Settings.addDefaultProperties().
 o Created DefaultPropertiesTestLibrary class for testing Driver.parseURL().
 o Implemented Settings.TDS_VERSION_XX constants in various classes.
 o Added test suite to DriverUnitTest to test Driver.getPropertyInfo().
 o Added missing 'appname' and 'progname' properties to, and removed default
   setting code (now handled in parseURL()) from, Driver.getPropertyInfo().

08/01/2004 - Brian Heineman
 o Partial application of patch [997595] SQL 6.5 Test suite.; general test clean