@@ -8,6 +8,8 @@ Changes from jTDS 0.8.1
 08/04/2004 - David Kilzer
  o Renamed Settings class to DefaultProperties to match its use.  Removed
    redundant "DEFAULT_" prefix from its public static constants.
+ o Refactored DefaultProperties to remove duplicate code.
+ o Created DefaultPropertiesUnitTest to test new methods in DefaultProperties.
 
 08/03/2004 - Brian Heineman
  o Applied patch in bug [1002811] Poor performance of cursor result sets;
